Use global /api/users/search for invite autocomplete
